src/test/ui/consts/const-block-const-bound.stderr
error[E0277]: the trait bound `UnconstDrop: ~const Drop` is not satisfied
  --> $DIR/const-block-const-bound.rs:18:11
   |
LL |         f(UnconstDrop);
   |         - ^^^^^^^^^^^ expected an implementor of trait `~const Drop`
   |         |
   |         required by a bound introduced by this call
   |
note: required by a bound in `f`
  --> $DIR/const-block-const-bound.rs:4:15
   |
LL | const fn f<T: ~const Drop>(x: T) {}
   |               ^^^^^^^^^^^ required by this bound in `f`
help: consider borrowing here
   |
LL |         f(&UnconstDrop);
   |           +
LL |         f(&mut UnconstDrop);
   |           ++++

error[E0277]: the trait bound `NonDrop: ~const Drop` is not satisfied
  --> $DIR/const-block-const-bound.rs:20:11
   |
LL |         f(NonDrop);
   |         - ^^^^^^^ expected an implementor of trait `~const Drop`
   |         |
   |         required by a bound introduced by this call
   |
note: required by a bound in `f`
  --> $DIR/const-block-const-bound.rs:4:15
   |
LL | const fn f<T: ~const Drop>(x: T) {}
   |               ^^^^^^^^^^^ required by this bound in `f`
help: consider borrowing here
   |
LL |         f(&NonDrop);
   |           +
LL |         f(&mut NonDrop);
   |           ++++

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0277`.
